swiper.css
/*
 * Swiper 2.7.0
 * Mobile touch slider and framework with hardware accelerated transitions
 *
 * http://www.idangero.us/sliders/swiper/
 *
 * Copyright 2010-2014, Vladimir Kharlampidi
 * The iDangero.us
 * http://www.idangero.us/
 *
 * Licensed under GPL & MIT
 *
 * Released on: August 30, 2014
*/
/* ===============================================================
Basic Swiper Styles
================================================================*/

.device {
  width: 100%;
  height: 100vh;
  padding: 0px;
  background: rgba(0,0,0,.75);
  margin: 0;
  position: relative;
}
.content-slide {
    height: 100vh;
    width: 100%;
}

.content-slide img {
    width: 100%;
    height: 100vh;
}

.device .arrow-left {
  background: url(img/arrows.png) no-repeat left top;
  position: absolute;
  left: 30px;
  top: 50%;
  margin-top: -15px;
  width: 17px;
  height: 30px;
  z-index: 100;
}
.device .arrow-right {
  background: url(img/arrows.png) no-repeat left bottom;
  position: absolute;
  right: 30px;
  top: 50%;
  margin-top: -15px;
  width: 17px;
  height: 30px;
  z-index: 100;
}

.swiper-container {
	margin:0 auto;
	position:relative;
	overflow:hidden;
	-webkit-backface-visibility:hidden;
	-ms-backface-visibility:hidden;
	-o-backface-visibility:hidden;
	backface-visibility:hidden;
	/* Fix of Webkit flickering */
	z-index:1;
}
.swiper-wrapper {
	position:relative;
	width:100%;
	-webkit-transition-property:-webkit-transform, left, top;
	-webkit-transition-duration:0s;
	-webkit-transform:translate3d(0px,0,0);
	-webkit-transition-timing-function:ease;
	-moz-transition-duration:0s;
	-moz-transform:translate3d(0px,0,0);
	-moz-transition-timing-function:ease;
	-o-transition-duration:0s;
	-o-transform:translate3d(0px,0,0);
	-o-transition-timing-function:ease;
	-o-transform:translate(0px,0px);

	-ms-transition-property:-ms-transform, left, top;
	-ms-transition-duration:0s;
	-ms-transform:translate3d(0px,0,0);
	-ms-transition-timing-function:ease;

	-webkit-transition-property:-webkit-transform, left, top;

	        transition-property:transform, left, top;
	-webkit-transition-duration:0s;
	        transition-duration:0s;
	-webkit-transform:translate3d(0px,0,0);
	        transform:translate3d(0px,0,0);
	-webkit-transition-timing-function:ease;
	        transition-timing-function:ease;
	box-sizing: content-box;
}
.swiper-free-mode > .swiper-wrapper {
	-webkit-transition-timing-function: ease-out;
	transition-timing-function: ease-out;
	margin: 0 auto;
}
.swiper-slide {
	float: left;
	box-sizing: content-box;
}

/* IE10 Windows Phone 8 Fixes */
.swiper-wp8-horizontal {
	-ms-touch-action: pan-y;
}
.swiper-wp8-vertical {
	-ms-touch-action: pan-x;
}

/* ===============================================================
Your custom styles, here you need to specify container's and slide's
sizes, pagination, etc.
================================================================*/
.swiper-container {
	/* Specify Swiper's Size: */

	width:100%;
}
.swiper-slide {
	/* Specify Slides's Size: */

	/*width: 100%;
	height: 100%;*/
}
.swiper-slide-active {
	/* Specific active slide styling: */

}
.swiper-slide-visible {
	/* Specific visible slide styling: */

}
/* ===============================================================
Pagination Styles
================================================================*/
.swiper-pagination-switch {
	display: inline-block;
	width: 12px;
	height: 12px;
	border-radius: 50%;
	margin: 5px;
	border: 2px solid tomato;

}
.swiper-active-switch {
	display: inline-block;
	width: 12px;
	height: 12px;
	border-radius: 50%;
	background: tomato;

}
.swiper-visible-switch {
	display: inline-block;
	width: 12px;
	height: 12px;
	border-radius: 50%;
	border: 2px solid tomato;
}

